# lexaloud

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MORNING-HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements-lock.cpu.txt  requirements-lock.cuda12.txt  requirements-lock.txt
.github/: CODEOWNERS  branch-protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: architecture.md  capture-matrix.md  cli-reference.md  configuration.md  design-rationale.md  faq.md  gotchas.md  http-api.md  install-ubuntu-gnome.md  models.md  troubleshooting.md  uninstall.md
docs/hotkeys/: gnome.md  kde.md  sway-hyprland.md  xfce-cinnamon.md
docs/install/: arch.md  fedora.md  math-speech.md  ubuntu-debian.md
scripts/: install.sh  record-demo.sh
spikes/: spike0_kokoro.py  spike0_results.md  spike1_matrix.md  spike1_selection.sh
src/lexaloud/: __init__.py  _privacy.py  audio.py  bug_report.py  cli.py  config.py  daemon.py  gui_control.py  indicator.py  models.py  mpris.py  overlay.py  platform.py  player.py  selection.py  session.py  setup.py  shortcuts.py
src/lexaloud/gui_control/: __init__.py  _gi_shim.py  config_io.py  control_window.py  keybindings.py  voices.py
src/lexaloud/preprocessor/: __init__.py  academic_abbreviations.py  citations.py  llm_normalize.py  markdown_strip.py  mathjax_dedupe.py  numbers.py  pdf_cleanup.py  segmenter.py  sre_latex.py  symbols.py
src/lexaloud/providers/: base.py  fake.py  kokoro.py
src/lexaloud/templates/: config.example.toml  lexaloud.desktop.template  systemd.service.template
src/readaloud/: __init__.py  audio.py  cli.py  config.py  daemon.py  gui_control.py  indicator.py  models.py  player.py  selection.py  setup.py
src/readaloud/preprocessor/: __init__.py  abbreviations.py  citations.py
src/readaloud/providers/: __init__.py  base.py  fake.py  kokoro.py
tests/: conftest.py  test_audio_fixes.py  test_audio_sinks.py  test_bug_report.py  test_cli_daemon_down.py  test_cli_llm_download.py  test_config.py  test_config_normalizer.py  test_daemon_smoke.py  test_llm_normalize.py  test_models_verify.py  test_mpris.py  test_overlay.py  test_platform.py  test_player_lifecycle.py  test_player_review_regressions.py  test_preprocessor_abbreviations.py  test_preprocessor_academic_abbreviations.py  test_preprocessor_citations.py  test_preprocessor_integration_pipeline.py  test_preprocessor_markdown.py  test_preprocessor_mathjax_dedupe.py  test_preprocessor_numbers.py  test_preprocessor_pdf.py  test_preprocessor_review_regressions.py  test_preprocessor_segmentation.py  test_preprocessor_sre_latex.py  test_preprocessor_symbols.py  test_real_kokoro_smoke.py  test_real_llm_normalize.py  test_real_sre_latex.py  test_review_round2_fixes.py  test_selection.py  test_session.py  test_setup.py  test_shortcuts.py  test_socket_path.py
tests/benchmarks/: math_corpus.py  test_benchmark_corpus.py  test_benchmark_corpus_llm.py  test_benchmark_corpus_sre.py
tests/fixtures/: mathjax_rl_sample.txt
