[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexaloud"
version = "0.0.1"
description = "Universal Linux text-to-speech tool for academic reading-along"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Gustav Jes Iversen"},
]
# NOTE: the authoritative dependency set is requirements-lock.txt, committed
# after Spike 0 resolves the ONNX Runtime packaging question. pyproject.toml
# declares only the loose dependency shapes so `pip install -e .` works in
# a dev loop; shipped installs use the lockfile via scripts/install.sh.
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "pysbd>=0.3",
    "httpx>=0.27",
    "pydantic>=2",
    # kokoro-onnx install shape is chosen by Spike 0; leave it out here
    # until the spike pins the exact shape. Spike 0 uses a separate venv.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.scripts]
lexaloud = "lexaloud.cli:main"
lexaloud-indicator = "lexaloud.indicator:main"
lexaloud-control = "lexaloud.gui_control:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
